--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+.App{
+  min-width: 99vw;
+  min-height: 100%;
+  background-color: #F5F5DC;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.appRow{
+   height:49.75vh;
+   width: 100%;
+   display:flex;
+   justify-content: center
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.appColumn{
+  height: 90%;
+  width: 25%;
+  margin: 1%;
+  box-shadow: 0px 4px 8px #191919;
+  border-radius: 1%;
 }
